Fixing of issue#3